使用ES6模块化规范

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,17 +1,20 @@
+/* 头部CSS */
+@import url('./index-header.css');
+/* 主体CSS */
+@import url('./index-main.css');
+/* 底部CSS */
+@import url('./index-footer.css');
+/* 动态背景 */
+@import url('./index-body-background.css');
+/* 回到顶部 */
+@import url('./index-back-to-top.css');
+
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
   box-sizing: border-box;
 }
-
-/* body {
-  background-color: #242424;
-  background: linear-gradient(to right, #6868cd, #0fd0c0);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-} */
 
 /* 设置滚动条的宽度和背景色 */
 ::-webkit-scrollbar {
