--- a/public/css/index-main.css
+++ b/public/css/index-main.css
@@ -1,18 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
-.main {
-  margin: 50px 0;
+main {
+  /* padding: 50px 0; */
   width: 100%;
   min-height: 100vh;
 }
 
-
-.main-date {
+/* 日期 */
+main .date {
   color: #fff;
   text-align: center;
 }
 
-.main-date .date-1 {
+main .date-1 {
   color: transparent;
   text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.6), 0px 4px 4px rgba(0, 0, 0, 0.1);
   font-size: 5rem;
@@ -20,7 +20,7 @@
   letter-spacing: .4rem;
 }
 
-.main-date .date-2 {
+main .date-2 {
   margin: 10px 0;
   color: transparent;
   text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.8), 0px 4px 4px rgba(0, 0, 0, 0.1);
@@ -28,9 +28,11 @@
   font-size: 18px;
 }
 
-.main-date .date-3 {
+main .date-3 {
   margin: 0 auto;
   width: 80%;
+  min-width: 300px;
+  max-width: 800px;
   color: transparent;
   text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.8), 0px 4px 4px rgba(0, 0, 0, 0.1);
   font-family: 'Quicksand', sans-serif;
