--- a/public/css/index-header.css
+++ b/public/css/index-header.css
@@ -12,21 +12,67 @@
   top: -50px;
   display: flex;
   align-items: center;
-
-  padding: 0 10px;
+  padding: 0 20px;
   width: 95%;
   height: 40px;
   background-color: #ffffff50;
   border-radius: 20px;
   backdrop-filter: blur(5px);
-
   /* 增加阴影效果 */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-
   transition: 1s;
 }
 
-.header-nav a {
+.header-nav.fixed {
+  position: fixed;
+  top: 0;
+  margin: 0;
+  width: 100%;
+  border-radius: 0;
+  backdrop-filter: blur(50px);
+  z-index: 10;
+}
+
+.header-nav .title {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 135px;
+  min-width: 135px;
+  height: 100%;
+}
+
+.header-nav .title .logo {
+  display: inline-block;
+  height: 80%;
+}
+
+.header-nav .title .logo img {
+  width: 100%;
+  height: 100%;
+}
+
+.header-nav .title .name {
+  display: inline-block;
+  color: #fff;
+}
+
+.header-nav .title .name h2 {
+  font-size: 16px;
+  font-family: 'youyuan';
+}
+
+.header-nav .title .name p {
+  font-size: 10px;
+  font-family: 'simhei';
+  letter-spacing: 2px;
+}
+
+.header-nav .nav {
+  margin: 0 50px;
+}
+
+.header-nav .nav a {
   margin: 0 10px;
   color: #fff;
   font-size: 14px;
@@ -34,21 +80,18 @@
   transition: .2s;
 }
 
-.header-nav a:hover {
+.header-nav .nav a:hover {
   color: #f30ba4;
   font-weight: bold;
-  transform: scale(.9);
 }
 
-.header-nav.fixed {
-  position: fixed;
-  top: 0;
-  left: 0;
 
-  margin: 0;
-  width: 100%;
-  border-radius: 0;
-  backdrop-filter: blur(50px);
+@media (max-width: 600px) {
+  .header-nav .title {
+    margin: 0 auto;
+  }
 
-  z-index: 10;
+  .header-nav .nav {
+    display: none;
+  }
 }
